# stz

./: README.md
dz5/: CMakeLists.txt  main.cpp
week-whatever-dz2/: CMakeLists.txt  ML.h  README.md  main.cpp  params.txt  plot_model.py  run.sh
week-whatever-dz3/: CMakeLists.txt  README.md  main.cpp
week3/: a.out  main  main.cpp  main.rs
week4/: a.out  main.cpp
